--- a/Lab 3 - Clustering/Lab 3.ipynb
+++ b/Lab 3 - Clustering/Lab 3.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,9 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Typical Process\n",
-    "\n",
-    "Data Preparation\n",
+    "# Data Preparation\n",
     "\n",
     "- Objective: create clusters of states, based on the available attributes\n",
     "\n",
@@ -204,9 +202,14 @@
     "    - The attribute Region is also categorical. Since the variable Region already “groups” states into regions, we can argue that it would not add much to the cluster analysis, therefore we can decide to exclude it.\n",
     "    - You need to provide reasonings for including or excluding attributes. \n",
     "\n",
-    "- Decide which method to use to normalize the data; we have seen two, min-max normalization and standardization\n",
-    "\n",
-    "### Min-max Normalization\n",
+    "- Decide which method to use to normalize the data; we have seen two, min-max normalization and standardization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Min-max Normalization\n",
     "\n",
     "This is really easy, we can quickly implement a custom R function to achieve this.\n",
     "\n",
@@ -215,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -481,12 +484,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Standardization"
+    "## Standardization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -789,14 +792,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Performing Normalization on Real Dataset\n",
+    "## Performing Normalization on Real Dataset\n",
     "\n",
     "Let's take a look at the original data first."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1577,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1699,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1763,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1863,8 +1866,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing Cluster Stats"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1893,14 +1903,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Average Linkage\n",
+    "## Average Linkage\n",
     "\n",
     "We used `method=\"ward\"` here for hierarchical clustering. Can you try other methods? Let's try `average`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1920,14 +1930,14 @@
     }
    ],
    "source": [
-    "avg = hclust(distance_matrix_norm, method = \"average\")\n",
+    "avg <- hclust(distance_matrix_norm, method = \"average\")\n",
     "plot(avg, labels = data_states$State)\n",
     "rect.hclust(avg, k = 4, border = 2:4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1983,47 +1993,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "k1 = kmeans(data_norm[, 2:10], centers = 4, nstart = 15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "List of 9\n",
-      " $ cluster     : int [1:51] 4 2 4 4 3 2 1 1 4 3 ...\n",
-      " $ centers     : num [1:4, 1:9] 0.024 0.048 0.7346 0.1716 0.0223 ...\n",
-      "  ..- attr(*, \"dimnames\")=List of 2\n",
-      "  .. ..$ : chr [1:4] \"1\" \"2\" \"3\" \"4\"\n",
-      "  .. ..$ : chr [1:9] \"Female_Population\" \"Male_Population\" \"Male_MedianAge\" \"Female_MedianAge\" ...\n",
-      " $ totss       : num 17\n",
-      " $ withinss    : num [1:4] 0.675 1.136 1.155 2.406\n",
-      " $ tot.withinss: num 5.37\n",
-      " $ betweenss   : num 11.6\n",
-      " $ size        : int [1:4] 8 13 3 27\n",
-      " $ iter        : int 3\n",
-      " $ ifault      : int 0\n",
-      " - attr(*, \"class\")= chr \"kmeans\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Look at a summary of the result\n",
-    "str(k1)"
+    "k1 <- kmeans(data_norm[, 2:10], centers = 4, nstart = 15)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "K-means clustering with 4 clusters of sizes 8, 13, 3, 27\n",
+       "\n",
+       "Cluster means:\n",
+       "  Female_Population Male_Population Male_MedianAge Female_MedianAge\n",
+       "1        0.02398831      0.02225711      0.7701923        0.8208042\n",
+       "2        0.04801482      0.04819569      0.3757396        0.4217321\n",
+       "3        0.73463877      0.72884493      0.4692308        0.5268065\n",
+       "4        0.17164572      0.16593073      0.5159544        0.5843046\n",
+       "  Unemployment_Rate    Robbery   Burglary Larceny.theft Motor.vehicle.theft\n",
+       "1         0.5649038 0.01584551 0.01873293     0.0377206          0.01193241\n",
+       "2         0.3062130 0.02789549 0.04949683     0.0729221          0.03207738\n",
+       "3         0.6923077 0.71703353 0.84568074     0.9349516          0.57707106\n",
+       "4         0.7279202 0.14896569 0.17820682     0.2138498          0.08415432\n",
+       "\n",
+       "Clustering vector:\n",
+       " [1] 4 2 4 4 3 2 1 1 4 3 4 2 2 4 4 2 2 4 4 1 4 4 4 2 4 4 1 2 4 1 4 4 4 4 2 4 2 4\n",
+       "[39] 4 1 4 2 4 3 2 1 4 4 1 4 2\n",
+       "\n",
+       "Within cluster sum of squares by cluster:\n",
+       "[1] 0.6752926 1.1362751 1.1554828 2.4059131\n",
+       " (between_SS / total_SS =  68.4 %)\n",
+       "\n",
+       "Available components:\n",
+       "\n",
+       "[1] \"cluster\"      \"centers\"      \"totss\"        \"withinss\"     \"tot.withinss\"\n",
+       "[6] \"betweenss\"    \"size\"         \"iter\"         \"ifault\"      "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Look at a summary of the result\n",
+    "k1\n",
+    "\n",
+    "# \"Available components\" tells you what can be accessed from this cluster object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2067,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2143,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2223,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2262,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2311,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2355,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2373,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2388,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2421,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2431,7 +2457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2446,7 +2472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2485,7 +2511,9 @@
    "name": "R",
    "pygments_lexer": "r",
    "version": "4.0.3"
-  }
+  },
+  "toc-autonumbering": true,
+  "toc-showmarkdowntxt": false
  },
  "nbformat": 4,
  "nbformat_minor": 4
