--- a/Lab 3 - Clustering/Lab 3.ipynb
+++ b/Lab 3 - Clustering/Lab 3.ipynb
@@ -2240,6 +2240,18 @@
     "\n",
     "What can we do? We can use the package `fviz_cluster`.\n",
     "\n",
+    "### Principal Component Analysis\n",
+    "- The main idea of principal component analysis (PCA) is to reduce the dimensionality\n",
+    "of a data set consisting of many variables correlated with each other, while retaining\n",
+    "the variation present in the dataset, up to the maximum extent.\n",
+    "- The existing variables are transformed by linear combination into a new set of\n",
+    "variables, called the principal components (the PCs)\n",
+    "- The PCs are orthogonal (meaning, the correlation between them is 0)\n",
+    "- The PCS are ordered such that the variation captured in the original variables\n",
+    "decreases as we move down in the order. So, the 1st principal component retains\n",
+    "maximum variation that was present in the original components.\n",
+    "- `fviz_cluster` performs PC analysis and plots the first two PCs\n",
+    "\n",
     "If the data contains more than 2 dimensions, the package `fviz_cluster` will perform something called principal component analysis (PCA) and plot the data points according to the first two principal components that explain the majority of the variance.\n",
     "\n",
     "This is a process called Dimensionality Reduction.\n",
